@startuml
class mino.Mino_T {
+ <<Create>> Mino_T()
+ void setXY(int,int)
+ void getDirection1()
+ void getDirection2()
+ void getDirection3()
+ void getDirection4()
}

class Main.KeyHandler {
+ {static} boolean upPressed
+ void keyTyped(KeyEvent)
+ void keyPressed(KeyEvent)
+ void keyReleased(KeyEvent)
}


class Main.PlayManager {
~ int WIDTH
~ int HEIGHT
+ {static} int left_x
+ {static} int right_x
+ {static} int bottom_y
+ {static} int top_y
~ Mino currentMino
~ int MINO_START_X
~ int MINO_START_Y
~ Mino nextMino
~ int NEXTMINO_X
~ int NEXTMINO_Y
+ {static} ArrayList<Block> staticBlocks
+ {static} int dropInterval
~ boolean gameOver
~ boolean effectCounterOn
~ int effectCounter
~ ArrayList<Integer> effectY
~ int level
~ int lines
~ int score
+ <<Create>> PlayManager()
- Mino pickMino()
+ void update()
- void checkDelete()
+ void draw(Graphics2D)
}


class mino.Mino {
+ Block[] b
+ Block[] tempB
~ int autoDropCounter
+ int direction
~ boolean leftCollision
+ boolean active
+ boolean deactivating
~ int deactivateCounter
+ void create(Color)
+ void setXY(int,int)
+ void updateXY(int)
+ void getDirection1()
+ void getDirection2()
+ void getDirection3()
+ void getDirection4()
+ void checkMovementCollision()
+ void checkRotationCollision()
- void checkStaticBlockCollision()
+ void update()
- void deactivating()
+ void draw(Graphics2D)
}


class mino.Mino_L2 {
+ <<Create>> Mino_L2()
+ void setXY(int,int)
+ void getDirection1()
+ void getDirection2()
+ void getDirection3()
+ void getDirection4()
}

class Main.Music {
}
class Main.TetrisTest {
+ {static} void main(String[])
}

class mino.Mino_Square {
+ <<Create>> Mino_Square()
+ void setXY(int,int)
+ void getDirection1()
+ void getDirection2()
+ void getDirection3()
+ void getDirection4()
}

class mino.Mino_L1 {
+ <<Create>> Mino_L1()
+ void setXY(int,int)
+ void getDirection1()
+ void getDirection2()
+ void getDirection3()
+ void getDirection4()
}

class mino.Mino_Z2 {
+ <<Create>> Mino_Z2()
+ void setXY(int,int)
+ void getDirection1()
+ void getDirection2()
+ void getDirection3()
+ void getDirection4()
}

class mino.Mino_Z1 {
+ <<Create>> Mino_Z1()
+ void setXY(int,int)
+ void getDirection1()
+ void getDirection2()
+ void getDirection3()
+ void getDirection4()
}

class Main.GamePanel {
+ {static} int WIDTH
+ {static} int HEIGHT
~ int FPS
~ Thread gameThread
~ PlayManager pm
+ <<Create>> GamePanel()
+ void launchGame()
+ void run()
- void update()
+ void paintComponent(Graphics)
}


class mino.Block {
+ int x
+ {static} int SIZE
+ Color c
+ <<Create>> Block(Color)
+ void draw(Graphics2D)
}


class mino.Mino_Bar {
+ <<Create>> Mino_Bar()
+ void setXY(int,int)
+ void getDirection1()
+ void getDirection2()
+ void getDirection3()
+ void getDirection4()
}



mino.Mino <|-- mino.Mino_T
java.awt.event.KeyListener <|.. Main.KeyHandler
mino.Mino <|-- mino.Mino_L2
mino.Mino <|-- mino.Mino_Square
mino.Mino <|-- mino.Mino_L1
mino.Mino <|-- mino.Mino_Z2
mino.Mino <|-- mino.Mino_Z1
Main.Runnable <|.. Main.GamePanel
javax.swing.JPanel <|-- Main.GamePanel
java.awt.Rectangle <|-- mino.Block
mino.Mino <|-- mino.Mino_Bar
@enduml